Bug 127896 - "Exchange database" leads to crash (non-gtk3)
Summary: "Exchange database" leads to crash (non-gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2019-10-01 06:42 UTC by Michael Weghorn
Modified: 2019-10-02 09:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["SvTreeList::GetParent(SvTreeListEntry *)"]


Attachments
bt Windows (windbg) (43.04 KB, text/plain)
2019-10-01 09:40 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2019-10-01 06:42:48 UTC
Steps to reproduce:

1) start LO Writer with either the "gen" or "kf5" VCL plugin (not gtk3)
2) open attachment attachment 133458 [details] from bug 107896
3) in menu select "Edit" -> "Exchange Database"

Result: Crash due to segmentation fault

Note: The crash does not occur when using the gtk3 VCL plugin.


Version: 6.4.0.0.alpha0+
Build ID: a1573b2e2fda77b7b7d605fe36f5a28f86a3e91b
CPU threads: 64; OS: Linux 4.9; UI render: default; VCL: x11; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Michael Weghorn 2019-10-01 06:45:42 UTC
Bibisecting using "bibisect-linux-64-6.3" indicates this was introduced by:

commit e6c422696fa1ee3f94642d94f7aca6743ad1e1e0
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Feb 28 21:22:45 2019 +0000

    weld SwChangeDBDlg
    
    Change-Id: Ie0fc6a6346f9c777b7172a0b641a2783cf633c1d
    Reviewed-on: https://gerrit.libreoffice.org/68544
    Tested-by: Jenkins
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>
    Tested-by: Caolán McNamara <caolanm@redhat.com>

Adding CC: to Caolán McNamara
Comment 2 Julien Nabet 2019-10-01 09:40:41 UTC
Created attachment 154674 [details]
bt Windows (windbg)

On Win10 with master sources updated today, I could reproduce this.
Comment 3 Commit Notification 2019-10-01 11:24:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b6bb036168590795b674fb3fdfb42ba5fdac271

Resolves: tdf#127896 fix 'Exchange database' crash

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2019-10-01 11:26:27 UTC
fixed in master, backport to 6-3 in gerrit
Comment 5 Commit Notification 2019-10-01 14:52:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/000849f1cccba60c129c0c4cd8b66a29dcec2269

Resolves: tdf#127896 fix 'Exchange database' crash

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-10-02 09:53:06 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 2215be5268a646d3cc7d138a0184c6826585b7fb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!