Resolves: tdf#127896 fix 'Exchange database' crash

Change-Id: I8278c9e959ab054b5bccf0b33e5885cd4ac7573a
Reviewed-on: https://gerrit.libreoffice.org/79923
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>